numpy/random/src/mt19937/randomkit.h

typedef struct rk_state_ {
    unsigned long key[RK_STATE_LEN];
    int pos;
    int has_gauss; /* !=0: gauss contains a gaussian deviate */
    double gauss;

    /* The rk_state structure has been extended to store the following
     * information for the binomial generator. If the input values of n or p
     * are different than nsave and psave, then the other parameters will be
     * recomputed. RTK 2005-09-02 */

    int has_binomial; /* !=0: following parameters initialized for
                              binomial */
    double psave;
    long nsave;
    double r;
    double q;
    double fm;
    long m;
    double p1;
    double xm;
    double xl;
    double xr;
    double c;
    double laml;
    double lamr;
    double p2;
    double p3;
    double p4;

} rk_state;
typedef enum {
    RK_NOERR = 0,  /* no error */
    RK_ENODEV = 1, /* no RK_DEV_RANDOM device */
    RK_ERR_MAX = 2
} rk_error;
/* error strings */
extern char *rk_strerror[RK_ERR_MAX];
/* Maximum generated random value */
#define RK_MAX 0xFFFFFFFFUL
/*
 * Initialize the RNG state using the given seed.
 */
extern void
rk_seed(unsigned long seed, rk_state *state);
/*
 * Initialize the RNG state using a random seed.
 * Uses /dev/random or, when unavailable, the clock (see randomkit.c).
 * Returns RK_NOERR when no errors occurs.
 * Returns RK_ENODEV when the use of RK_DEV_RANDOM failed (for example because
 * there is no such device). In this case, the RNG was initialized using the
 * clock.
 */
extern rk_error
rk_randomseed(rk_state *state);
/*
 * Returns a random unsigned long between 0 and RK_MAX inclusive
 */
extern unsigned long
rk_random(rk_state *state);
/*
 * Returns a random long between 0 and LONG_MAX inclusive
 */
extern long
rk_long(rk_state *state);
/*
 * Returns a random unsigned long between 0 and ULONG_MAX inclusive
 */
extern unsigned long
rk_ulong(rk_state *state);
/*
 * Returns a random unsigned long between 0 and max inclusive.
 */
extern unsigned long
rk_interval(unsigned long max, rk_state *state);
/*
 * Returns a random double between 0.0 and 1.0, 1.0 excluded.
 */
extern double
rk_double(rk_state *state);
/*
 * fill the buffer with size random bytes
 */
extern void
rk_fill(void *buffer, size_t size, rk_state *state);
/*
 * fill the buffer with randombytes from the random device
 * Returns RK_ENODEV if the device is unavailable, or RK_NOERR if it is
 * On Unix, if strong is defined, RK_DEV_RANDOM is used. If not, RK_DEV_URANDOM
 * is used instead. This parameter has no effect on Windows.
 * Warning: on most unixes RK_DEV_RANDOM will wait for enough entropy to answer
 * which can take a very long time on quiet systems.
 */
extern rk_error
rk_devfill(void *buffer, size_t size, int strong);
/*
 * fill the buffer using rk_devfill if the random device is available and using
 * rk_fill if it is not
 * parameters have the same meaning as rk_fill and rk_devfill
 * Returns RK_ENODEV if the device is unavailable, or RK_NOERR if it is
 */
extern rk_error
rk_altfill(void *buffer, size_t size, int strong, rk_state *state);
/*
 * return a random gaussian deviate with variance unity and zero mean.
 */
extern double
rk_gauss(rk_state *state);